renames classes/methods to follow java/project naming conventions